# league-scouting-platform-test

./: .gitattributes  .gitignore  pyproject.toml
league_scouting_fork/: dbt_project.yml
league_scouting_fork_dbt/: dbt_project.yml
