[tool.poetry]
name = "league-scouting-platform-test"
version = "0.1.0"
description = "Test GLEAGUE"
authors = ["Alex J"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "league_scouting_platform_test" }
]

[tool.poetry.dependencies]
python = ">=3.13"
pandas = "^2.3.1"
google-cloud-bigquery = "^3.35.1"
pandas-gbq = "^0.29.2"
pyarrow = "^21.0.0"
kaggle = "^1.7.4"
dbt-bigquery = "^1.10.0"
dbt-core = "^1.10.5"
gcloud = "^0.18.3"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"